# marc-down

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/features/: feature.md
docs/tests/: test.md
src/: App.md  App.tsx  main.md  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/packaging/linux/: MarcDown.desktop.hbs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export_commands.rs  fs_commands.rs  mod.rs  search_commands.rs
src/atoms/: editorAtom.md  editorAtom.ts  fileTreeAtom.md  fileTreeAtom.ts  index.md  index.ts  outlineAtom.md  outlineAtom.ts  panelAtom.md  panelAtom.ts  searchAtom.md  searchAtom.ts  settingsAtom.ts  workspaceAtom.md  workspaceAtom.ts
src/components/: ConflictDialog.tsx  DefaultAppToast.md  DefaultAppToast.tsx  ExportDialog.tsx
src/components/Editor/: BalatroBackground.css  BalatroBackground.tsx  Editor.md  Editor.tsx  (+2 more)
src/hooks/: useAppTitle.ts  useDropFile.ts  useEditorContextMenu.ts  useEditorPadding.ts  useEditorSearch.ts  useFile.md  useFile.ts  useFileConflict.ts  useInitApp.md  useInitApp.ts  useKeyboardShortcuts.md  useKeyboardShortcuts.ts  useOutline.md  useOutline.ts  usePanelLayout.ts  useSearch.md  useSearch.ts  useSettings.ts  useTheme.ts
src/styles/: fonts.css  global.css
src/types/: index.md  index.ts
src/utils/: export.ts  markdownParser.md  markdownParser.ts  mdast.perf.test.ts  satteri.perf.test.ts  settings.ts  tauriFs.md  tauriFs.ts
(+66 files in other folders)
