[package]
name = "marc-down"
version = "0.1.0"
edition = "2021"
authors = ["MarcDown Contributors"]
description = "A lightweight split-view Markdown editor."
license = "GPL-3.0"

[lib]
name = "marc_down_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
epub-builder = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSOpenPanel", "NSSavePanel", "NSPanel", "NSWindow", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSURL", "NSString", "NSArray"] }
